# Piscine_Python_42

pyhron_module_01/ex1/: ft_garden_data.py
pyhron_module_01/ex5/: ft_plant_types.py
python_moduel_09/ex0/: space_station.py
python_moduel_09/ex1/: alien_contact.py
python_moduel_09/ex2/: space_crew.py
python_module_0/ex5/: ft_water_reminder.py
python_module_0/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
python_module_00/: .gitignore
python_module_00/ex1/: ft_garden_name.py
python_module_00/ex3/: ft_harvest_total.py
python_module_01/ex0/: ft_garden_intro.py
python_module_01/ex2/: ft_plant_growth.py
python_module_01/ex3/: ft_plant_factory.py
python_module_01/ex4/: ft_garden_security.py
python_module_01/ex6/: ft_garden_analytics.py
python_module_02/ex0/: ft_first_exception.py
python_module_02/ex1/:  ft_raise_exception.py  ft_different_errors.py
python_module_02/ex2/: ft_custom_errors.py  ft_different_errors.py
python_module_02/ex3/: ft_custom_errors.py  ft_finally_block.py
python_module_02/ex4/: ft_finally_block.py  ft_raise_errors.py
python_module_02/ex5/: ft_garden_management.py
python_module_03/ex0/: ft_command_quest.py
python_module_03/ex1/: ft_score_analytics.py
python_module_03/ex2/: ft_coordinate_system.py
python_module_04/: ft_crisis_response.py  sample_data.json
python_module_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
python_module_8/ex1/: loading.py  pyproject.toml
python_module_8/ex2/: .env.example  .gitignore  oracle.py  pyproject.toml
(+53 files in other folders)
