[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = ["your_login <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
numpy = "*"
matplotlib = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"